# rts-coldfront

./: .dockerignore  .gitignore  Containerfile  Containerfile.debug  Containerfile.debugpy  pyproject.toml  skills-lock.json
.github/workflows/: tests.yaml
.tekton/: build.dev.yaml  build.main.yaml
coldfront/config/: base.py  core.py  email.py  logging.py  settings.py  urls.py
coldfront/config/plugins/: api.py  slurm.py  slurmrest.py
coldfront/core/allocation/: admin.py  models.py  test_views.py  utils.py  views.py
coldfront/core/allocation/management/commands/: auto_approve_general_cluster_requests.py
coldfront/core/allocation/migrations/: 0004_remove_allocation_resources_allocation_resource_and_more.py  0005_allocation_uniq_allocation_project_resource.py  0006_allocation_resources.py
coldfront/core/grant/: forms.py  views.py
coldfront/core/project/: admin.py  forms.py  tests.py  views.py
coldfront/core/project/tests/: test_views.py  tests.py
coldfront/core/resource/templates/: resource_detail.html  resource_list.html
coldfront/core/school/: admin.py
coldfront/core/school/tests/: tests.py
coldfront/core/user/: forms.py  models.py  urls.py  utils.py  views.py
coldfront/core/utils/: mail.py
coldfront/core/utils/templatetags/: common_tags.py
coldfront/core/utils/tests/: tests.py
coldfront/plugins/api/: apps.py  openapi.yaml  serializers.py  urls.py  views.py
coldfront/plugins/slurmrest/: apps.py  utils.py
coldfront/plugins/slurmrest/tests/: integration.py
coldfront/plugins/xdmod/: utils.py
coldfront/static/: README.md  package-lock.json  package.json  vite.config.js
coldfront/static/branding/: nyu_violet.css
coldfront/static/bundles/: c3.js  coldfront-allocation-summary.js  coldfront-center-summary.js  coldfront.css  coldfront.js  manifest.json  util.js
coldfront/static/src/: allocationSummary.ts  bs.ts  centerSummary.ts  coldfront.ts  dataTable.ts  form.ts  util.ts
coldfront/static/src/charts/: gaugeChart.ts
coldfront/static/src/scss/: centerSummary.scss  coldfront.scss
coldfront/templates/: robots.txt
coldfront/templates/common/: authorized_navbar.html  base.html  footer.html  navbar_admin.html  navbar_director.html  navbar_invoice.html  navbar_login.html  navbar_nonadmin_staff.html  nonauthorized_navbar.html
coldfront/templates/email/: allocation_activated.txt  new_allocation_request.txt  request_to_add_grants.txt  request_to_add_publications.txt
deploy/local/: Caddyfile  deploy.fish
(+51 files in other folders)
