[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coldfront"
version = "1.1.6"
requires-python = ">=3.12"
authors = [
  {name = "Andrew E. Bruno"},
  {name = "Dori Sajdak"},
  {name = "Mohammad Zia"},
]
description = "HPC Resource Allocation System"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["high-performance-computing", "resource-allocation"]
classifiers = [
  'Programming Language :: Python :: 3',
  'Framework :: Django :: 3.2',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Topic :: Scientific/Engineering',
  'Topic :: System :: Systems Administration',
  'Topic :: Internet :: WWW/HTTP :: WSGI :: Application',
]

dependencies = [
    "crispy-bootstrap4>=2024.10",
    "django>=5.2",
    "django-crispy-forms>=2.3",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "django-model-utils>=5.0.0",
    "django-q2>=1.7.6",
    "django-settings-export>=1.2.1",
    "django-simple-history>=3.8.0",
    "django-split-settings>=1.3.2",
    "djangorestframework>=3.16.1",
    "doi2bib>=0.4.0",
    "fontawesome-free>=5.15.4",
    "formencode>=2.1.1",    
    "httpx>=0.28.1",
    "humanize>=4.11.0",    
    "plotly[express]>=6.2.0",
    "python-dateutil>=2.9.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "xdmod-data>=1.1.0",
]

[project.optional-dependencies]
auth = [
  "django-auth-ldap==5.1.0",
  "ldap3==2.9.1",
  "python-ldap==3.4.4",
]

prod = [
  "gunicorn==23.0.0",
  "mozilla-django-oidc>=4.0.1",
  "psycopg[binary]>=3.2.7",
]

[project.urls]
"Bug Tracker" = "https://github.com/NYU-RTS/rts-coldfront/issues"
Changelog = "https://github.com/NYU-RTS/rts-coldfront/blob/main/CHANGELOG.md"
Documentation = "https://coldfront.readthedocs.io"
"Source Code" = "https://github.com/NYU-RTS/rts-coldfront"

[project.scripts]
coldfront = "coldfront:manage"
gunicorn = "gunicorn.app.wsgiapp:run"

[dependency-groups]
dev = [
  "debugpy>=1.8.14",
  "django-sslserver>=0.22",
  "django-su>=1.0.0",
  "django-sslserver>=0.22",
  "django-su>=1.0.0",
  "django-upgrade",
  "factory-boy>=3.3.3",
  "faker>=35.2.0",
  "ruff",
  "types-python-dateutil>=2.9.0.20241206",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "S308"]

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
